--- a/MessagesBriana/MessagesBriana/Storyboards/Base.lproj/Main.storyboard
+++ b/MessagesBriana/MessagesBriana/Storyboards/Base.lproj/Main.storyboard
@@ -1,24 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7rP-nA-2Ru">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Table View Controller-->
+        <scene sceneID="Hyn-gO-4w7">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="sUZ-TX-MFd" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="cLj-f6-oNO">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="messageCell" rowHeight="101" id="ZXi-dY-UpY">
+                                <rect key="frame" x="0.0" y="50" width="393" height="101"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZXi-dY-UpY" id="NjX-8t-PKX">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="101"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="(message text)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhy-82-Fru">
+                                            <rect key="frame" x="24" y="15" width="280" height="24"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(subtitle text)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ofh-tb-moP">
+                                            <rect key="frame" x="24" y="43" width="280" height="43"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" systemColor="secondaryLabelColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EbR-qw-SKD">
+                                            <rect key="frame" x="308" y="25" width="51" height="51"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="35" id="OmI-m1-fcO"/>
+                                                <constraint firstAttribute="width" secondItem="EbR-qw-SKD" secondAttribute="height" multiplier="1:1" id="g1T-5K-pqF"/>
+                                            </constraints>
+                                            <state key="normal" title="Button"/>
+                                            <buttonConfiguration key="configuration" style="plain" image="moon.stars.circle" catalog="system"/>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Ofh-tb-moP" firstAttribute="top" secondItem="zhy-82-Fru" secondAttribute="bottom" constant="4" id="8gk-gT-gbx"/>
+                                        <constraint firstItem="Ofh-tb-moP" firstAttribute="leading" secondItem="NjX-8t-PKX" secondAttribute="leadingMargin" constant="4" id="9ni-lt-Brf"/>
+                                        <constraint firstItem="zhy-82-Fru" firstAttribute="top" secondItem="NjX-8t-PKX" secondAttribute="topMargin" constant="4" id="KSV-6n-FPS"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Ofh-tb-moP" secondAttribute="bottom" constant="4" id="NjN-Xk-iyU"/>
+                                        <constraint firstItem="EbR-qw-SKD" firstAttribute="leading" secondItem="Ofh-tb-moP" secondAttribute="trailing" constant="4" id="WHQ-Iy-s7p"/>
+                                        <constraint firstItem="zhy-82-Fru" firstAttribute="leading" secondItem="NjX-8t-PKX" secondAttribute="leadingMargin" constant="4" id="an6-UU-tnO"/>
+                                        <constraint firstItem="EbR-qw-SKD" firstAttribute="top" secondItem="NjX-8t-PKX" secondAttribute="topMargin" constant="14" id="bdQ-Wu-nJw"/>
+                                        <constraint firstItem="EbR-qw-SKD" firstAttribute="leading" secondItem="zhy-82-Fru" secondAttribute="trailing" constant="4" id="bl2-OP-Jmr"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="EbR-qw-SKD" secondAttribute="bottom" constant="14" id="eJF-fo-Jyo"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="EbR-qw-SKD" secondAttribute="trailing" constant="14" id="qw6-fa-rlW"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="sUZ-TX-MFd" id="xwT-PO-Ey7"/>
+                            <outlet property="delegate" destination="sUZ-TX-MFd" id="VAt-TJ-44a"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="R7g-Qh-1af">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="OAq-G3-u09"/>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mZE-Uq-5VD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="748.85496183206101" y="-32.394366197183103"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="B7H-0E-MFn">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7rP-nA-2Ru" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5Q4-6n-bjP">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="sUZ-TX-MFd" kind="relationship" relationship="rootViewController" id="D91-Ad-KsA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5JN-b1-5V9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="41.984732824427482" y="-32.394366197183103"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="moon.stars.circle" catalog="system" width="128" height="123"/>
+        <systemColor name="secondaryLabelColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
